--- a/src/main/resources/templates/atualizar-usuario.html
+++ b/src/main/resources/templates/atualizar-usuario.html
@@ -33,17 +33,16 @@
             <div class="container-fluid">
 
                 <div class="card o-hidden border-0 shadow-lg my-5">
-                    <div class="card-body p-0">
+                    <div class="card-header">
+                        <span class="text-gray-900 ">Atualizar Usuário</span>
+                    </div>
+                    <div class="card-body ">
                         <!-- Nested Row within Card Body -->
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="p-5">
-                                    <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Atualizar Usuário</h1>
-                                        <span class="text-success text-center" th:utext="${successMessage}"></span>
-                                    </div>
                                     <form class="user" th:action="@{/editar/usuario}"
                                           method="post" autocomplete="off"  role="form">
+                                        <div th:if="${successMessage} != null" class="alert alert-success" th:text="${successMessage}" role="alert">
+                                            A simple success alert—check it out!
+                                        </div>
                                         <div class="form-group row">
                                             <div class="col-sm-6 mb-3 mb-sm-0">
                                                 <label for="role" class="form-label required">Nome de usuário</label>
@@ -119,10 +118,7 @@
                                         </div>
                                         <hr>
                                     </form>
-                                </div>
-                            </div>
                         </div>
-                    </div>
                 </div>
 
             </div>
