new: -correcoes na classe conexao -criação da tela de visualização de solicitacoes de conexao e as funções de confirmar ou excluir solicitações recebidas -adicionado funções de Solicitar, cancelar, confirmar e desfazer conexoes ao visualizar usuario

--- a/src/main/resources/templates/fragments/side-bar.html
+++ b/src/main/resources/templates/fragments/side-bar.html
@@ -33,7 +33,7 @@
             <span>Explorar</span>
         </a>
 
-        <a class="nav-link " href="#">
+        <a class="nav-link " href="/conexoes">
             <i class="fas fa-fw fa-users"></i>
             <span>Minhas conexões</span>
         </a>
