Adicionado o link para a seção de explorar

--- a/src/main/resources/templates/fragments/side-bar.html
+++ b/src/main/resources/templates/fragments/side-bar.html
@@ -28,7 +28,7 @@
             <span>Meu perfil</span>
         </a>
 
-        <a class="nav-link " href="#">
+        <a class="nav-link " href="/explorar">
             <i class="fas fa-fw fa-search"></i>
             <span>Explorar</span>
         </a>
