--- a/src/main/resources/templates/explorar.html
+++ b/src/main/resources/templates/explorar.html
@@ -43,31 +43,9 @@
                     </button>
                 </div>
                 <!-- Content Row -->
-                <div>
+                <div >
                     <div th:each="pst : ${posts}" class="w-75 m-2">
-
-                        <!-- Modal -->
-                        <div class="modal fade" th:attr="id='recordDeleteModal'+ ${pst.postagem.id}" tabindex="-1" role="dialog" aria-labelledby="recordDeleteModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="recordDeleteModalLabel">Exclusão de post</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        Tem certeza que deseja deletar o post?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
-                                        <a href="newRecordForm.html" class="btn btn-danger" th:attr="href='/deletar/post/'+${pst.postagem.id}">Sim</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card">
+                        <div class="card" th:if="${pst.postagem.user.userName != usuario2.userName}">
                             <div class="card-body card-post">
                                 <a th:href="@{'/visualizar/usuario/' + ${pst.postagem.user.id}}"><strong th:text="${pst.postagem.user.userName}"></strong></a>
 
