adiciona postagens em alta

--- a/src/main/resources/templates/fragments/side-bar.html
+++ b/src/main/resources/templates/fragments/side-bar.html
@@ -38,7 +38,7 @@
             <span>Minhas conexões</span>
         </a>
 
-        <a class="nav-link " href="#">
+        <a class="nav-link " href="/em-alta">
             <i class="fas fa-fw fa-arrow-alt-circle-up"></i>
             <span>Em alta</span>
         </a>
