--- a/src/main/resources/templates/fragments/side-bar.html
+++ b/src/main/resources/templates/fragments/side-bar.html
@@ -23,7 +23,7 @@
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
 
-        <a class="nav-link " href="#">
+        <a class="nav-link " href="/visualizar-perfil">
             <i class="fas fa-fw fa-user"></i>
             <span>Meu perfil</span>
         </a>
@@ -35,7 +35,7 @@
 
         <a class="nav-link " href="/conexoes">
             <i class="fas fa-fw fa-users"></i>
-            <span>Minhas conexões</span>
+            <span>Solicitações de conexão</span>
         </a>
 
         <a class="nav-link " href="/em-alta">
